--- a/static/md/8.2_Strings.md
+++ b/static/md/8.2_Strings.md
@@ -10,17 +10,16 @@ class: left
 
 # Strings Store UTF-8 Encoded Text
 
-Difficult because of three point...
+Strings are implemented as a collection of bytes plus some methods to provide 
+useful functionality when those bytes are interpreted as text
 
-* Rust’s propensity for exposing possible errors
+Strings are difficult because...
 
-* strings being a more complicated data structure
-  
-* UTF-8
+  * Rust’s propensity for exposing possible errors
 
-* Strings are implemented as a collection of bytes plus some methods to 
-  provide useful functionality when those bytes are interpreted as text.
-
+  * strings being a more complicated data structure
+    
+  * UTF-8
 
 ---
 class: left
@@ -33,8 +32,8 @@ class: left
 
 * These are called *string slices*
 
-* String literals are stored in the binary output of the program 
-  and are therefore string slices.
+* String literals are stored in the binary output of the program and are 
+  therefore string slices
 
 ---
 class: left
@@ -43,7 +42,7 @@ class: left
 
 * String type is provided in Rust standard library
 
-* is a growable, mutable, owned, UTF-8 encoded string type
+* Is a growable, mutable, owned, UTF-8 encoded string type
 
 ---
 class: left
@@ -71,26 +70,43 @@ class: left
 let mut s = String::new();
 ```
 
-* Create a new empty string `s` that we can load data into
+Create a new empty string `s` that we can load data into
 
 ```rust
 let data = "initial contents";
 let s = data.to_string();
-// the method also works on a literal directly:
+// the method also works on a literal directly
 let s = "initial contents".to_string();
 ```
-* create a string literal and then convert that to String 
+create a string literal and then convert that to String 
 
 ```rust
 let s = String::from("initial contents");
 ```
-* Create a String from string literal directly
+Create a String from string literal directly
 
 ---
 class: left
 
-# Updating a String
+# UTF-8 encoded
 
+* Strings are UTF-8 encoded
+
+* We can include any properly encoded data in them
+
+```rust
+let hello = String::from("السلام عليكم");
+let hello = String::from("Dobrý den");
+let hello = String::from("Hello");
+let hello = String::from("שָׁלוֹם");
+let hello = String::from("नमस्ते");
+let hello = String::from("こんにちは");
+let hello = String::from("안녕하세요");
+let hello = String::from("你好");
+let hello = String::from("Olá");
+let hello = String::from("Здравствуйте");
+let hello = String::from("Hola");
+```
 
 ---
 class: left
@@ -99,11 +115,11 @@ class: left
 
 A string can 
 
-* Grow in size
+  * Grow in size
 
-* Contents can change
+  * Contents can change
 
-* Use `+` or the `format!` macro to concatenate string values together
+Use `+` or the `format!` macro to concatenate string values together
 
 ---
 class: left
@@ -121,19 +137,33 @@ let s2 = "bar";
 s1.push_str(&s2);
 println!("s2 is {}", s2);
 ```
-* `push_str` dosen't take ownership of the argument it gets
+
+`push_str` method ...
+
+* Takes a string slice as parameter
+
+* Dosen't take ownership of the argument it gets
+
+* Adds the string slice to the existing string
 
 ---
 class: left
 
-# Appending to a String with `push_str`
+# Appending to a String with `push`
 
 ```rust
 let mut s = String::from("lo");
 s.push('l');
 ```
+`push` method ...
 
-* Takes a single character as a parameter and adds it to the String
+* Takes a character as a parameter 
+
+* Dosen't take ownership of the argument
+
+* Dosen't accept references
+
+* and adds the character to the String
 
 ---
 class: left
@@ -163,7 +193,7 @@ fn add(self, s: &str) -> String {
 
 * Add `&Str` to `String`
 
-* But, the type of `&s2` is `String` not `Str`
+* But, wait, the type of `&s2` is `String` not `Str` ?
 
 * Rust uses a *deref coercion*, which here turns &s2 into &s2[..]
 
@@ -239,32 +269,34 @@ class: left
 
 # Why not?
 
-* accessing individual characters in a string by referencing them by index 
-  is a valid and common operation in many programmig languages
+accessing individual characters in a string by referencing them by index is a 
+valid and common operation in many programmig languages
 
 ---
 class: left
 
 # Internal Representation
 
-* `String` is a wrapper over a `Vec<u8>`
+`String` is a wrapper over a `Vec<u8>`
   
-  ```rust
-  let len = String::from("Hola").len(); // 4
-  ```
-  
-  * Vec storing the string “Hola” is four bytes long
-  
-  ```rust
-  let len = String::from("Здравствуйте").len(); // 24 ?
-  ```
-  
+```rust
+let len = String::from("Hola").len(); // 4
+```
+
+Vec storing the string “Hola” is four bytes long
+
+```rust
+let len = String::from("Здравствуйте").len(); // 24 ?
+```
+
+Vec storing the string “Здравствуйте” is 24 bytes long rathern than 12
+
+Why ?
+
   * Because each Unicode scalar value takes two bytes of storage
-  
-  * The lengh of the string is 24 instead of 12
-  
-  An index into the string’s bytes will not always correlate to a valid 
-  Unicode scalar value. 
+
+So, an index into the string’s bytes will not always correlate to a valid 
+Unicode scalar value
   
 ---
 class: left
@@ -287,7 +319,10 @@ Hindi word “नमस्ते” written in the Devanagari script is ultimate
 ```rust
 ['न', 'म', 'स',  '्', 'त',  'े']
 ```
-There 6 characters, 4 and 6 are diacritics which don't make sense on their own
+
+* There are 6 characters
+
+* 4 and 6 are diacritics which don't make sense on their own
 
 ---
 class: left
@@ -300,35 +335,43 @@ class: left
 
 This four letters that make up the Hindi word
 
+---
+class: left
+
+# Indexing is a bad idea 
+
+because...
+
+* it’s not clear the return type would be: a byte value, a character, a grapheme
+  cluster, or a string slice. 
+
 * Indexing operations are expected to always take constant time (O(1)), but not 
-possible to guarantee
+  possible to guarantee
 
 ---
 class: left
 
 # Slicing Strings
 
-Indexing is a bad idea because it’s not clear the return type would be: 
-a byte value, a character, a grapheme cluster, or a string slice. 
-
 Rather than indexing using [] with a single number, you can use [] with a range 
 to create a string slice containing particular bytes
 
 ```rust
 let hello = "Здравствуйте";
-
 let s = &hello[0..4];
 ```
+
 `s` will be a `&str` that contains the first four bytes of the string, `Зд`
 
 ```rust
 let hello = "Здравствуйте";
-
-let s = &hello[0..4];
+let s = &hello[0..1];
 ```
 
 Rust will panic at runtime in the same way that accessing an invalid index in 
 a vector does
+
+create string slices with caution, it can crash your program
 
 ---
 class: left
@@ -351,6 +394,7 @@ for c in "नमस्ते".chars() {
 त
 े
 ```
+
 ---
 class: left
 
@@ -370,9 +414,25 @@ for b in "नमस्ते".bytes() {
 // ... etc
 ```
 
----
-class: left
+Remember that valid Unicode scalar values may be made up of more than one byte
 
 * `grapheme clusters`
 
 functionality is not provided by the standard library, crates are available
+
+---
+class: left
+
+# Summary
+
+* Strings Are Not So Simple
+
+* “strings” include `String` type and the string slice `&str` 
+
+* They are `UTF-8` encoded
+
+* Update the string with `push_str` or add a character with `push`
+
+* Concatenate strings with `+` or `format`
+
+* Can't safely index into the strings, you can use slicing with caution
