--- a/static/md/8.3_Hash_Maps.md
+++ b/static/md/8.3_Hash_Maps.md
@@ -10,11 +10,13 @@ class: left
 
 # Hash Maps Store Keys Associated with Values
 
-* `HashMap<K, V></K>` stores a mapping of keys of type `K` to values of type `V`
+* `HashMap<K, V>` stores a mapping of keys of type `K` to values of type `V`
 
 * `hashing function` determines how it places these keys and values into memory
 
-* Useful for when you want to look up data by using a key that can be of any type
+* Useful when you want to look up data by using a key that can be of any type
+
+* Use case: Team score in a game
 
 ---
 class: left
@@ -23,21 +25,20 @@ class: left
 
 ```rust
 use std::collections::HashMap;
-
 let mut scores = HashMap::new();
+scores.insert(String::from("Blue"), 10);
+scores.insert(String::from("Yellow"), 50);
 ```
 
 * Unlike other collections, it is not included in the scope automatically
 
-* Like vectors
+* hash maps store their data on the heap
 
-  * hash maps store their data on the heap
+* Hash maps are homogeneous 
 
-  * Hash maps are homogeneous 
+    * all of the keys must have the same type
 
-      * all of the keys must have the same type
-
-      * and all of the values must have the same type
+    * and all of the values must have the same type
 
 ---
 class: left
@@ -51,9 +52,31 @@ let initial_scores = vec![10, 50];
 let scores: HashMap<_, _> = teams.iter().zip(initial_scores.iter()).collect();
   ```
   
-  Another way of creating a hashmap is collect method on a vector of tuples, 
-  where each tuple consists of a key and its value
-  
+Another way of creating a hashmap is to use collect method on a vector of tuples, 
+where each tuple consists of a key and its value
+
+<!-- ---
+class: left
+
+# updating a Hash Map
+
+```rust
+use std::collections::HashMap;
+
+let field_name = String::from("Favorite color");
+let field_value = String::from("Blue");
+
+let mut map = HashMap::new();
+map.insert(&field_name, &field_value);
+```
+
+* the number of keys and values is growable
+
+* But, each key can only have one value associated with it at a time
+
+* Insert values into hashmap with `insert` method which takes (key, value) as 
+arguments -->
+
 ---
 class: left
 
@@ -74,22 +97,8 @@ map.insert(field_name, field_value);
   
 * For types like `String`, value will be moved and hashmap will be the owner
 
----
-class: left
-
-```rust
-use std::collections::HashMap;
-
-let field_name = String::from("Favorite color");
-let field_value = String::from("Blue");
-
-let mut map = HashMap::new();
-map.insert(&field_name, &field_value);
-// field_name and field_value are invalid at this point
-```
-
-* For references the values won’t be moved into the hash map.
-The values must be valid for at least as long as the hash map is valid 
+* For references, values must be valid for at least as long as the hash map is
+  valid 
 
 ---
 class: left
@@ -132,6 +141,7 @@ for (key, value) in &scores {
 Yellow: 50
 Blue: 10
 ```
+
 * Will print in an arbitary order
 
 ---
@@ -139,24 +149,24 @@ class: left
 
 # Updating a Hash Map
 
-* The number of keys and values is growable 
+* The number of keys and values are growable 
 
-* But, each key can only have one value associated with it at a time
+* But, each key can have only one value associated with it at a time
 
 * When updating, we have to decide how to handle the case when
 
-  * Insert only if the key has no value 
-
   * If key already exists, overwrite old value
+
+  * Insert only if the key has no value 
 
   * Updating a Value Based on the Old Value
 
 ---
 class: left
 
-# Overwriting a Value
+# If key already exists, Overwrite old Value
 
-`insert` will overwrite the value
+`insert` will overwrite the value, else will create
 
 ```rust
 use std::collections::HashMap;
@@ -169,11 +179,22 @@ scores.insert(String::from("Blue"), 25);
 println!("{:?}", scores);
 ```
 
+```rust
+{"Blue": 25}
+```
+
+`insert` will take the key value pair...
+
+  * Will create if the key don't exist
+
+  * Will overwrite if it already exist
 
 ---
 class: left
 
 # Only Insert If the Key Has No Value
+
+`entry` will return the key status and update based on it
 
 ```rust
 use std::collections::HashMap;
@@ -187,15 +208,23 @@ scores.entry(String::from("Blue")).or_insert(50);
 println!("{:?}", scores);
 ```
 
+```rust
+{"Yellow": 50, "Blue": 10}
+```
+
 * `entry` takes the key we want to check as a parameter
 
 * returns an `enum` called `Entry` that represents a value that might 
-  or might not exist. 
+  or might not exist
+
+* Since blue already exists it won't update
 
 ---
 class: left
 
 # Updating a Value Based on the Old Value
+
+`entry` will look up key's status and update it based on the old value
 
 ```rust
 use std::collections::HashMap;
@@ -215,8 +244,8 @@ println!("{:?}", map);
 ```rust
 {"world": 2, "hello": 1, "wonderful": 1}
 ```
-<!-- needs more explanation and understanding -->
-<!-- This code will print {"world": 2, "hello": 1, "wonderful": 1}. The or_insert method actually returns a mutable reference (&mut V) to the value for this key. Here we store that mutable reference in the count variable, so in order to assign to that value we must first dereference count using the asterisk (*). The mutable reference goes out of scope at the end of the for loop, so all of these changes are safe and allowed by the borrowing rules. -->
+
+* WIP
 
 ---
 class: left
@@ -228,9 +257,17 @@ class: left
 
 * If its slow, you can switch to another function by specifying a different hasher
 
-* Provided by crates
+* Lot of them are available in crates.io
 
 ---
 class: left
 
 # Summary
+
+* HashMap<K, V> stores a mapping of keys of type K to values of type V
+
+* Create new hash map with `let mut scores = HashMap::new();`
+
+* Access values by `.get(<key>)` method
+
+* insert - will create if don't exist else update
