added intro to index

--- a/static/md/9.0_Error_Handling.md
+++ b/static/md/9.0_Error_Handling.md
@@ -1,7 +1,7 @@
 
 class: middle, center
 
-### 9.1
+### 9.0
 
 # Error Handling
 
@@ -10,18 +10,16 @@ class: left
 
 # Error Handling
 
-* Rust requires you to acknowledge the possibility of an error occurring 
+Rust requires you to acknowledge the possibility of an error occurring 
 and take some action before your code will compile
 
-* Two major categories
+Two major categories
 
-* Recoverable
+  * Recoverable
 
-* Unrecoverable
+  * Unrecoverable
 
-Unrecoverable errors are always symptoms of bugs, like trying to access a location beyond the end of an array.
-
-Languages have exceptions and treat both of them in the same way
+Most Languages treat both of them in the same way, using exceptions
 
 ---
 class: left
@@ -29,7 +27,7 @@ class: left
 # Recoverable
 
 * Situations in which it’s reasonable to report the problem to the user 
-and retry the operation
+  and retry the operation
 
 * like a file not found error
 
@@ -40,9 +38,21 @@ class: left
 
 # Unrecoverable
 
-* Unrecoverable errors are always symptoms of bugs
+* They are always symptoms of bugs
 
 * like trying to access a location beyond the end of an array
 
 * Provides `panic!` macro that stops execution on unrecoverable errors 
 
+---
+class: left
+
+# Summary
+
+* Rust’s commitment to reliability extends to error handling
+
+* Two major types...
+
+  * Recoverable
+
+  * Unrecoverable
