--- a/static/md/9.1_Unrecoverable_Errors_with_panic.md
+++ b/static/md/9.1_Unrecoverable_Errors_with_panic.md
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>The Rust Programming Language - Slides</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-  </head>
-  <body>
-    <textarea id="source">
 class: middle, center
 
 ### 9.1
@@ -18,11 +9,15 @@ class: left
 
 # `panic!` macro
 
-* program will print a failure message
+Rust provides `panic!` macro for case of critical failures...
 
-* unwind and clean up the stack or abort
+`Panic!` macro will...
 
-* and then quit. 
+  * print a failure message
+
+  * unwind and clean up the stack or abort
+
+  * and then quit. 
 
 ---
 class: left
@@ -31,15 +26,15 @@ class: left
 
 * Unwinding 
 
-* Rust walks back the stack and clean up the data from each funciton 
+  * Rust walks back the stack and clean up the data from each funciton 
 
-* Take a lot of work and resulting binary will be large
+  * Take a lot of work and resulting binary will be large
 
 * Unwinding 
 
-* Ends the program with out cleanup and OS will clean the data 
+  * Ends the program with out cleanup and OS will clean the data 
 
-* Process will end quickly and the resulting binary will be small
+  * Process will end quickly and the resulting binary will be small
 
 ---
 class: left
@@ -52,14 +47,13 @@ Add `panic = 'abort'` to the appropirate profile
 [profile.release]
 panic = 'abort'
 ```
+
 If you want to abort on panic in release mode
 
 ---
 class: left
 
-# Example
-
-Call it intentionally 
+# `panic!` intentionally 
 
 ```rust
 fn main() {
@@ -76,7 +70,10 @@ thread 'main' panicked at 'crash and burn', src/main.rs:2:4
 note: Run with `RUST_BACKTRACE=1` for a backtrace.
 ```
 
-caused by another issue...
+---
+class: left
+
+# `panic!` caused by an issue
 
 ```rust
 fn main() {
@@ -85,6 +82,19 @@ fn main() {
   v[99];
 }
 ```
+
+```rust
+$ cargo run
+   Compiling panic v0.1.0 (file:///projects/panic)
+    Finished dev [unoptimized + debuginfo] target(s) in 0.27 secs
+     Running `target/debug/panic`
+thread 'main' panicked at 'index out of bounds: the len is 3 but the index is
+99', /checkout/src/liballoc/vec.rs:1555:10
+note: Run with `RUST_BACKTRACE=1` for a backtrace.
+error: Process didn't exit successfully: `target/debug/panic` (exit code: 101)
+```
+
+Attempting to access an element beyond the end of a vector, which will cause a panic!
 
 ---
 class: left
@@ -100,12 +110,20 @@ class: left
 * The key to reading the backtrace is to start from the top and read until 
   you see files you wrote
 
-    </textarea>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
-    </script>
-    <script type="text/javascript">
-      var slideshow = remark.create();
-    </script>
-  </body>
-</html>
+* To get backtraces, debug symbols must be enabled. 
 
+* They are enabled by default when using cargo build or cargo run without the 
+  --release flag
+
+---
+class: left
+
+# Summary
+
+* `panic!` prints a failure message and unwinds, cleanup or abort and then quit
+
+* Choose to cleanup or abort by setting `panic = 'abort'` in Cargo.toml 
+
+* A backtrace is a list of all the functions that have been called to get to this point
+
+* Set `RUST_BACKTRACE` env variable to get a backtrace
