--- a/static/md/9.2_Recoverable_Errors_with_Result.md
+++ b/static/md/9.2_Recoverable_Errors_with_Result.md
@@ -13,10 +13,10 @@ class: left
 * Most errors aren’t serious enough to stop the program entirely
 
 * When a function fails, it’s for a reason that we can easily interpret and 
-respond to
+  respond to
 
-* If we try to open a file and that operation fails because the file doesn’t 
-exist, we might want to create the file instead of terminating the process.
+* eg; If we try to open a file and that operation fails because the file doesn’t 
+  exist, we might want to create the file instead of terminating the process.
 
 ---
 class: left
@@ -40,11 +40,259 @@ enum Result<T, E> {
   * returned in a failure case 
   * within the Err variant
 
+* Because `Result` has these generic type parameters, we can use it in many 
+  different situations
+
 ---
 class: left
 
-* Because `Result` has these generic type parameters, we can use the Result 
-  type and the functions that the standard library has defined on it in many 
-  different situations where the successful value and error value we want to 
-  return may differ
+# Example
 
+```rust
+use std::fs::File;
+
+fn main() {
+    let f = File::open("hello.txt");
+}
+```
+
+* Opening a file returns a `Result` value because the function could fail
+
+* How do we know that ? 
+
+  * Look at the standard library
+
+  * Ask the compiler
+
+```rust
+let f: u32 = File::open("hello.txt");
+``` 
+
+will throw an error
+
+```rust
+error[E0308]: mismatched types
+ --> src/main.rs:4:18
+  |
+4 |     let f: u32 = File::open("hello.txt");
+  |                  ^^^^^^^^^^^^^^^^^^^^^^^ expected u32, found enum
+`std::result::Result`
+  |
+  = note: expected type `u32`
+             found type `std::result::Result<std::fs::File, std::io::Error>`
+```
+
+This tells us the return type of the `File::open` function is a `Result<T, E>`
+
+Where...
+
+  * Where `T` is `std::fs::File`, which is a file handle
+
+  * And `E` is is `std::io::Error`
+
+Which means that call to File::open might...
+
+  * succeed and return to us a file handle
+
+  or
+
+  * fail and return error information
+
+In case of `File::open` the value of f will be...
+
+  * succeeds : instance of Ok that contains a file handle
+  
+  * failure : instance of Err that contains more information about the kind of 
+              error that happened
+
+
+Take different actions depending on the value `File::open` returned
+
+Using `match` expression
+
+```rust
+use std::fs::File;
+
+fn main() {
+    let f = File::open("hello.txt");
+    let f = match f {
+        Ok(file) => file,
+        Err(error) => {
+            panic!("There was a problem opening the file: {:?}", error)
+        },
+    };
+}
+```
+
+* `Result` enum and its variants have been imported in the prelude
+
+* we don’t need to specify `Result::` before the `Ok` and `Err` variants
+
+* when the result is Ok, return the inner file value out of the Ok variant, 
+  and we then assign that file handle value to the variable f
+
+* The other arm of the match handles the case where we get an Err value from 
+  File::open. In this example, we’ve chosen to call the panic! macro 
+
+---
+class: left
+
+# Matching on Different Errors
+
+Take different actions for different failure reasons 
+
+```rust
+use std::fs::File;
+use std::io::ErrorKind;
+
+fn main() {
+    let f = File::open("hello.txt");
+
+    let f = match f {
+        Ok(file) => file,
+        Err(ref error) if error.kind() == ErrorKind::NotFound => {
+            match File::create("hello.txt") {
+                Ok(fc) => fc,
+                Err(e) => {
+                    panic!(
+                        "Tried to create file but there was a problem: {:?}",
+                        e
+                    )
+                },
+            }
+        },
+        Err(error) => {
+            panic!(
+                "There was a problem opening the file: {:?}",
+                error
+            )
+        },
+    };
+}
+```
+
+---
+class: left
+
+* `File::open` on error returns `io::Error` inside the Err variant
+
+* `io::Error` is a struct provided by the standard library 
+
+* `kind` method on struct will return an `io::ErrorKind` value
+
+* `ErrorKind::NotFound` indicates the file we’re trying to open doesn’t exist yet
+
+* `if error.kind() == ErrorKind::NotFound` is called a match guard
+
+  * it’s an extra condition on a match arm that further refines the arm’s pattern
+
+  * This condition must be true for that arm’s code to be run
+
+* WIP
+
+---
+class: left
+
+# Shortcuts for Panic on Error: unwrap and expect
+
+* Using match works well enough 
+
+* but it can be a bit verbose
+
+* doesn’t always communicate intent well
+
+---
+class: left
+
+# unwrap
+
+`unwrap` is a shortcut method that is implemented just like the `match`
+
+* If the Result value is 
+
+  * Ok variant : unwrap will return the value inside the Ok
+
+  * Err variant : unwrap will call the panic! macro for us
+
+```rust
+use std::fs::File;
+
+fn main() {
+    let f = File::open("hello.txt").unwrap();
+}
+```
+
+```rust
+thread 'main' panicked at 'called `Result::unwrap()` on an `Err` value: Error {
+repr: Os { code: 2, message: "No such file or directory" } }',
+src/libcore/result.rs:906:4
+```
+
+---
+class: left
+
+# expect
+
+* works the same way as unwrap
+
+except...
+
+* Customize the panic! message instead of the default 
+
+```rust
+use std::fs::File;
+
+fn main() {
+    let f = File::open("hello.txt").expect("Failed to open hello.txt");
+}
+```
+
+```rust
+thread 'main' panicked at 'Failed to open hello.txt: Error { repr: Os { code:
+2, message: "No such file or directory" } }', src/libcore/result.rs:906:4
+```
+
+Helpful for debugging, as the error message is specific
+
+---
+class: left
+
+# Propagating Errors
+
+* WIP
+
+---
+class: left
+
+# A Shortcut for Propagating Errors: ?
+
+```rust
+use std::io;
+use std::io::Read;
+use std::fs::File;
+
+fn read_username_from_file() -> Result<String, io::Error> {
+    let mut f = File::open("hello.txt")?;
+    let mut s = String::new();
+    f.read_to_string(&mut s)?;
+    Ok(s)
+}
+```
+
+* WIP
+
+---
+class: left
+
+# `?` Can Only Be Used in Functions That Return Result
+
+* `?` can only be used in functions that have a return type of Result
+
+* WIP
+
+---
+class: left
+
+# Summary
+
+* WIP
