added more content

--- a/static/md/9.3_To_panic_or_Not_To_panic.md
+++ b/static/md/9.3_To_panic_or_Not_To_panic.md
@@ -19,7 +19,6 @@ the error is unrecoverable
 
 * Returning `Result` is a good default choice
 
-
 ---
 class: left
 
@@ -43,10 +42,23 @@ class: left
 
 * When You Have More Information Than the Compiler
 
-
 ---
 class: left
 
 # Guidelines for Error Handling
 
-* 
+* WIP
+
+---
+class: left
+
+# Creating Custom Types for Validation
+
+* WIP
+
+---
+class: left
+
+# Summary
+
+* WIP
