--- a/static/md/10.2_Traits_Defining_Shared_Behavior.md
+++ b/static/md/10.2_Traits_Defining_Shared_Behavior.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 10.2
@@ -6,10 +5,143 @@ class: middle, center
 # Traits: Defining Shared Behavior
 
 ---
+
 class: left
 
-# Title 1
+# Traits: Defining Shared Behavior
 
-* Traits are ways to add special behaviour to objects even though the objects 
+* Abstract over behavior that types can have in common
+
+* Trait tells the Rust compiler about functionality a particular type has and
+  might share with other types
+
+* Traits are ways to add special behaviour to objects even though the objects
   are not yours
+
+* When using generic type parameters, we can use trait bounds to specify, at compile time, that the generic type may be any type that implements a trait and therefore has the behavior we want to use in that situation
+
+* Traits are similar to a feature often called ‘interfaces’ in other languages, though with some differences
+
+---
+
+class: left
+
+# Defining a Trait
+
+* The behavior of a type consists of the methods we can call on that type
+
+* Different types share the same behavior if we can call the same methods on all of those types
+
+---
+
+class: left
+
+# Default Implementations
+
+```rust
+pub trait Summarizable {
+    fn summary(&self) -> String {
+        String::from("(Read more...)")
+    }
+}
+```
+
+Definition of `Summarizable` `trait` with a default implementation of the summary method
+
+```rust
+impl Summarizable for NewsArticle {}
+```
+
+Use the default implementation
+
+```rust
+let article = NewsArticle {
+    headline: String::from("Penguins win the Stanley Cup Championship!"),
+    location: String::from("Pittsburgh, PA, USA"),
+    author: String::from("Iceburgh"),
+    content: String::from("The Pittsburgh Penguins once again are the best
+    hockey team in the NHL."),
+};
+println!("New article available! {}", article.summary());
+```
+
+This code prints New article available! (Read more...).
+
+* Reusing the implementation from the default summarizable trait
+
+* To override the default, just implement the trait method
+
+---
+
+class: left
+
+# Default Implementations calling other methods
+
+* Default implementations can call other methods in the same trait
+
+* even if those other methods don’t have a default implementation
+
+```rust
+pub trait Summarizable {
+    fn author_summary(&self) -> String;
+    fn summary(&self) -> String {
+        format!("(Read more from {}...)", self.author_summary())
+    }
+}
+```
+
+author_summary is being called by summary, but there is no default implementation
+
+For a type to use the summarizable trait,
+
+* it may or may not implement `summary`, as there is a default implementation
+
+* has to implement the `author_summary` as there is no default implementation
+
+---
+
+class: left
+
+```rust
+// defining author_summary as there is no default implementation
+impl Summarizable for Tweet {
+    fn author_summary(&self) -> String {
+        format!("@{}", self.username)
+    }
+}
+let tweet = Tweet {
+    username: String::from("horse_ebooks"),
+    content: String::from("of course, as you probably already know, people"),
+    reply: false,
+    retweet: false,
+};
+// now you can call the tweet summary
+println!("1 new tweet: {}", tweet.summary());
+```
+
+```rust
+1 new tweet: (Read more from @horse_ebooks...)
+```
+
+---
+
+class: left
+
+# Trait Bounds
+
+* specifying `trait` bounds on a generic `type`
+
+* 
+
+---
+
+class: left
+
+# Fixing the largest Function with Trait Bounds
+
+---
+
+class: left
+
+# Using Trait Bounds to Conditionally Implement Methods
 
