--- a/static/md/10.1_Generic_Data_Types.md
+++ b/static/md/10.1_Generic_Data_Types.md
@@ -1,11 +1,11 @@
-
 class: middle, center
 
 ### 10.1
 
-# Generic Data Types 
+# Generic Data Types
 
 ---
+
 class: left
 
 # Generics
@@ -14,4 +14,272 @@ class: left
 
 * They are abstract stand-ins for concrete types or other properties
 
-* 
+---
+
+class: left
+
+# Using Generic Data Types in Function Definitions
+
+We can define functions that use generics in the signature of the function where the data types of the parameters and return value go
+
+---
+
+class: left
+
+# Example
+
+```rust
+fn largest_i32(list: &[i32]) -> i32 {
+    let mut largest = list[0];
+    for &item in list.iter() {
+        if item > largest {
+            largest = item;
+        }
+    }
+    largest
+}
+
+fn largest_char(list: &[char]) -> char {
+    let mut largest = list[0];
+    for &item in list.iter() {
+        if item > largest {
+            largest = item;
+        }
+    }
+    largest
+}
+
+fn main() {
+    let number_list = vec![34, 50, 25, 100, 65];
+    let result = largest_i32(&number_list);
+    println!("The largest number is {}", result);
+    let char_list = vec!['y', 'm', 'a', 'q'];
+    let result = largest_char(&char_list);
+    println!("The largest char is {}", result);
+}
+```
+
+---
+
+class: left
+
+* functions `largest_i32` and `largest_char` have the exact same body
+
+* Type naming convention is 
+
+    *  CamelCase
+
+    * tend to be short by convention, often just one letter
+
+Short for “type”, T is the default choice of most Rust programmers.
+
+Before using the type parameter name in a function signature
+
+We have to declare the type parameter name
+
+Type name declarations go in angle brackets between the name of the function and the parameter list
+
+```rust
+fn largest<T>(list: &[T]) -> T {
+```
+
+* Read as, function largest is generic over some type T
+
+* It has one parameter named list
+
+* the type of list is a slice of values of type T
+
+* It will return a value of the same type T
+
+---
+
+class: left
+
+# Using Generic Data Types in Struct Definitions
+
+Use `< >` syntax to use generic type parameter in one or more of the struct’s 
+  fields
+
+```rust
+struct Point<T> {
+    x: T,
+    y: T,
+}
+
+fn main() {
+    let integer = Point { x: 5, y: 10 };
+    let float = Point { x: 1.0, y: 4.0 };
+}
+```
+
+A Point struct that holds x and y values of type T
+
+* Declare the name of the type parameter within `< >` just after the name of the 
+  struct
+
+* Use generic type in the struct definition where we would specify concrete data 
+  types
+
+Read as ... Point struct is generic over some type T, and the fields x and y are both that same type
+
+---
+
+class: left
+
+```rust
+struct Point<T> {
+    x: T,
+    y: T,
+}
+
+fn main() {
+    let wont_work = Point { x: 5, y: 4.0 };
+}
+```
+
+```rust
+error[E0308]: mismatched types
+ -->
+  |
+7 |     let wont_work = Point { x: 5, y: 4.0 };
+  |                                      ^^^ expected integral variable, found
+  floating-point variable
+  |
+  = note: expected type `{integer}`
+  = note:    found type `{float}`
+```
+
+Errors on creating instance of a Point with different types 
+
+The fields `x` and `y` must be the same type because both have the same generic data type `T`
+
+---
+
+class: left
+
+```rust
+struct Point<T, U> {
+    x: T,
+    y: U,
+}
+fn main() {
+    let both_integer = Point { x: 5, y: 10 };
+    let both_float = Point { x: 1.0, y: 4.0 };
+    let integer_and_float = Point { x: 5, y: 4.0 };
+}
+```
+
+A Point generic over two types `T` and `U`, so that x and y may be values of different types
+
+* Use as many generic type parameters in a definition as you want
+
+* using more than a few gets hard to read and understand
+
+* probably a sign that your code could use some restructuring 
+
+---
+
+class: left
+
+# Using Generic Data Types in Enum Definitions
+
+* WIP
+
+---
+
+class: left
+
+# Using Generic Data Types in Method Definitions
+
+```rust
+struct Point<T> {
+    x: T,
+    y: T,
+}
+impl<T> Point<T> {
+    fn x(&self) -> &T {
+        &self.x
+    }
+}
+fn main() {
+    let p = Point { x: 5, y: 10 };
+
+    println!("p.x = {}", p.x());
+}
+```
+
+Implementing a method named `x` on the `Point<T>` struct that will return a reference to the `x` field, which is of type `T`
+
+Declaring `T` as a generic type after the impl is how Rust knows the type in the angle brackets in Point is a generic type rather than a concrete type
+
+```rust
+impl Point<f32> {
+    fn distance_from_origin(&self) -> f32 {
+        (self.x.powi(2) + self.y.powi(2)).sqrt()
+    }
+}
+```
+
+Dosen't need the be declared next to impl because f32 is a concrete type
+
+---
+
+class: left
+
+* Generic type parameters in a struct definition aren’t always the same generic type parameters you want to use in that struct’s method signatures
+
+* The method takes another Point as a parameter, which might have different types than the self Point that we’re calling mixup on
+
+* The method creates a new Point instance that has the x value from the self Point (which is of type T) and the y value from the passed-in Point (which is of type W):
+
+```rust
+struct Point<T, U> {
+    x: T,
+    y: U,
+}
+
+impl<T, U> Point<T, U> {
+    fn mixup<V, W>(self, other: Point<V, W>) -> Point<T, W> {
+        Point {
+            x: self.x,
+            y: other.y,
+        }
+    }
+}
+
+fn main() {
+    let p1 = Point { x: 5, y: 10.4 };
+    let p2 = Point { x: "Hello", y: 'c'};
+
+    let p3 = p1.mixup(p2);
+
+    println!("p3.x = {}, p3.y = {}", p3.x, p3.y);
+}
+```
+
+* Methods that use different generic types than their struct’s definition
+
+generic parameters `T` and `U` are declared after impl
+  * since they go with the struct definition
+
+The generic parameters `V` and `W` are declared after fn mixup
+  * since they are only relevant to the method
+
+---
+
+class: left
+
+# Performance of Code Using Generics
+
+* Not any slower than if you had specified concrete types
+
+* Acheived by performing monomorphization of code using generics at compile time
+
+* Monomorphization is the process of turning generic code into specific code with 
+  the concrete types that are actually used filled in
+
+---
+
+class: left
+
+# Summary
