--- a/static/md/10.3_Validating_References_with_Lifetimes.md
+++ b/static/md/10.3_Validating_References_with_Lifetimes.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 10.3
@@ -6,26 +5,28 @@ class: middle, center
 # Validating References with Lifetimes
 
 ---
+
 class: left
 
 # Lifetimes
 
 * reference has a lifetime, which is the scope for which that reference is valid
 
-* Just like **types**, lifetimes are implicit and inferred
+* Just like types, lifetimes are implicit and inferred
 
 * Types are annotated, when they can't be infered or multiple types are possible
 
-* Lifetimes are annotated, using generic lifetime parameters 
+* Lifetimes are annotated, using generic lifetime parameters
 
 * Rust’s most distinctive feature
 
 ---
+
 class: left
 
 # Lifetimes Prevent Dangling References
 
-* Prevent dangling references, reference data other than the data we’re 
+* Prevent dangling references, reference data other than the data we’re
   intending to reference
 
 ```rust
@@ -40,6 +41,230 @@ class: left
 ```
 
 ---
+
+class: left
+
+# The Borrow Checker
+
+```rust
+{
+    let r;                // -------+-- 'a
+                          //        |
+    {                     //        |
+        let x = 5;        // -+-----+-- 'b
+        r = &x;           //  |     |
+    }                     // -+     |
+                          //        |
+    println!("r: {}", r); //        |
+}                         // -------+
+```
+
+* Errors because the lifetime 'b is shorter than the lifetime of 'a
+
+* the subject of the reference does not live as long as the reference
+
+```rust
+fn main() {
+  {
+      let x = 5;            // -----+-- 'b
+                            //      |
+      let r = &x;           // --+--+-- 'a
+                            //   |  |
+      println!("r: {}", r); //   |  |
+                            // --+  |
+  }                         // -----+
+}
+```
+
+A valid reference because the data has a longer lifetime than the reference
+
+x has the lifetime 'b, which is larger than 'a, means r can reference x
+
+Rust knows that the reference in r will always be valid while x is valid
+
+---
+
+class: left
+
+# Generic Lifetimes in Functions
+
+---
+
+class: left
+
+# Lifetime Annotation Syntax
+
+```rust
+&i32        // a reference
+&'a i32     // a reference with an explicit lifetime
+&'a mut i32 // a mutable reference with an explicit lifetime
+```
+
+* Tells, how the generic lifetime parameters of multiple references relate to
+  each other
+
+*
+
+---
+
+class: left
+
+# Thinking in Terms of Lifetimes
+
+---
+
+class: left
+
+# Lifetime Annotations in Struct Definitions
+
+---
+
+class: left
+
+# Lifetime Annotations in Struct Definitions
+
+---
+
+class: left
+
+# Lifetime Elision
+
+* Initially all the lifetimes have to be explicitly mentioned
+
+* Later programmed into the Rust core
+
+* Follows a set of rules called `lifetime elision rules`
+
+* The rules are a set of particular cases that the compiler will consider, and if
+  your code fits these cases, you don’t need to write the lifetimes explicitly
+
+* input lifetimes : Lifetimes on function or method parameters
+
+* output lifetimes : lifetimes on return values
+
+---
+
+class: left
+
+# Rules
+
+* Each reference parameter gets its own lifetime parameter
+
+  * a function with one parameter gets one lifetime parameter
+    `fn foo<'a>(x: &'a i32)`
+
+  * a function with two arguments gets two separate lifetime parameters
+    `fn foo<'a, 'b>(x: &'a i32, y: &'b i32)`
+
+* If the number of input lifetime parameter is...
+
+  * One : assign it to all output lifetime parameters 
+          `fn foo<'a>(x: &'a i32) -> &'a i32`
+
+  * multiple & one of them is &self or &mut self (method) :
+                then the lifetime of `self` is assigned to all output lifetime 
+                parameters.
+
+---
+
+class: left
+
+# Example 1
+
+```rust
+fn first_word(s: &str) -> &str {
+```
+
+* Rule 1 : Each parameter gets its own lifetime. We’re going to call it 'a 
+
+```rust
+fn first_word(s: &`a str) -> &str {
+```
+
+* Rule 2 :  All output lifetime parameters will get the single input life time 
+            parameter 
+
+```rust
+fn first_word(s: &`a str) -> &`a str {
+```
+
+* Rule 3 : Dosen't apply since none of the parameters are self
+
+---
+
+class: left
+
+# Example 2
+
+```rust
+fn longest(x: &str, y: &str) -> &str {
+```
+
+* Rule 1 :  Each parameter gets its own lifetime, two parameters will have two 
+            lifetimes
+
+```rust
+fn longest<'a, 'b>(x: &'a str, y: &'b str) -> &str {
+```
+
+* Rule 2 : Doesn’t apply since there is more than one input lifetime
+
+* Rule 3 : Dosen't apply since it not a method and none of the parameters are self
+
+Haven’t figured out what the return type’s lifetime is...
+
+Compiler errors out, can't figure out the life time of the output parameter
+
+
+---
+
+class: left
+
+# Lifetime Annotations in Method Definitions
+
+---
+
+class: left
+
+# The Static Lifetime
+
+* `'static` is a special lifetime 
+
+* It is the entire duration of the program
+
+
+```rust
+let s: &'static str = "I have a static lifetime.";
+```
+
+* The text of this string is stored directly in the binary of your program
+
+* It is always available
+
+* so, lifetime of all string literals is `'static`
+
+---
+
+class: left
+
+# Generic Type Parameters, Trait Bounds, and Lifetimes Together
+
+```rust
+use std::fmt::Display;
+
+fn longest_with_an_announcement<'a, T>(x: &'a str, y: &'a str, ann: T) -> &'a str
+    where T: Display
+{
+    println!("Announcement! {}", ann);
+    if x.len() > y.len() {
+        x
+    } else {
+        y
+    }
+```
+
+---
+
 class: left
 
 # Summary
