--- a/static/md/14.0_More_About_Cargo_and_Crates.io.md
+++ b/static/md/14.0_More_About_Cargo_and_Crates.io.md
@@ -8,4 +8,22 @@ class: middle, center
 
 class: left
 
+# Advanced Cargo and Crates.io
+
+* Customize your build through release profiles
+
+* Publish libraries on crates.io
+
+* Organize large projects with workspaces
+
+* Install binaries from crates.io
+
+* Extend Cargo using custom commands
+
+---
+
+class: left
+
 # Summary
+
+Let's learn more about Cargo and Crates.io
