--- a/static/md/14.1_Customizing_Builds_with_Release_Profiles.md
+++ b/static/md/14.1_Customizing_Builds_with_Release_Profiles.md
@@ -8,4 +8,43 @@ class: middle, center
 
 class: left
 
+# Release Profiles
+
+Release profiles are predefined and customizable 
+
+Two predetermined profiles are...
+
+* dev :  `cargo build`
+
+* release : `cargo build --release` 
+    
+---
+
+class: left
+
+# Customize Profiles
+
+`[profile.*]` selection can override any subset of the default settings
+
+```toml
+[profile.dev]
+opt-level = 1 # default is 0
+
+[profile.release]
+opt-level = 2 # default is 3
+```
+
+`opt-level` controls the number of optimizations applied with a range of zero 
+to three. 
+
+---
+
+class: left
+
 # Summary
+
+* Release profiles can be predefined and customizable
+
+* `dev` and `release` are the default profiles
+
+* You can override any subset of settings with selection `[profile.*]`
