--- a/static/md/14.2_Publishing_a_Crate_to_Crates.io.md
+++ b/static/md/14.2_Publishing_a_Crate_to_Crates.io.md
@@ -8,4 +8,309 @@ class: middle, center
 
 class: left
 
+# Making Useful Documentation Comments
+
+* `///` are documentation comments
+
+* Will generate HTML documentation
+
+* Support Markdown notation for formatting 
+
+* Place documentation comments just before the item they’re documenting
+
+```rust
+/// Adds one to the number given.
+///
+/// # Examples
+///
+/// ```
+/// let five = 5;
+///
+/// assert_eq!(6, my_crate::add_one(5));
+/// ```
+pub fn add_one(x: i32) -> i32 {
+    x + 1
+}
+```
+
+---
+
+class: left
+
+# rustdoc 
+
+* `cargo doc` runs the `rustdoc` distributed with rust
+
+* Generate `html` from the documentation comments 
+
+* In folder `target/doc`
+
+* `cargo doc --open` will build and open the documentation in the browser
+
+<img src="file:///Users/salapati/.rustup/toolchains/stable-x86_64-apple-darwin/share/doc/rust/html/book/second-edition/img/trpl14-01.png"/>
+
+---
+
+class: left
+
+# Commonly Used Sections
+
+Sections that crate authors commonly use...
+
+* Panics : If function could panic!, inform the user about it
+
+* Errors : If function returns a Result, the kinds of errors that might occur
+
+* Safety : If the function is unsafe to call explain why
+
+---
+
+class: left
+
+# Documentation Comments as Tests
+
+* Examples in documentation demonstrate how to use the library
+
+* `cargo test` will run the code examples in your documentation as tests!
+
+* So, your examples will allways stay in syc with your code 
+
+* WIP example ? 
+ 
+---
+
+class: left
+
+# Commenting Contained Items
+
+* //!, adds documentation to the item that contains the comments rather than 
+  adding documentation to the items following the comments
+
+* Explain the purpose of the container overall to help your crate users 
+  understand your organization.
+
+```rust
+//! # My Crate
+//!
+//! `my_crate` is a collection of utilities to make performing certain
+//! calculations more convenient.
+
+/// Adds one to the number given.
+// --snip--
+```
+
+---
+
+class: left
+
+# cargo doc
+
+`cargo doc --open` will generate document and show...
+
+<img src="file:///Users/salapati/.rustup/toolchains/stable-x86_64-apple-darwin/share/doc/rust/html/book/second-edition/img/trpl14-02.png" />
+
+
+---
+
+class: left
+
+# Exporting a Convenient Public API with pub use
+
+* Structure of your public API is a major consideration when publishing a crate
+
+* `pub use` helps you re-export the public api with out modifying internal 
+  organization
+
+* It takes a public item in one location and makes it public in another location,
+  as if it was defined in the other location instead
+
+
+---
+
+class: left
+
+# Re-exporting
+
+Remove the internal organization from the public API and re-export
+
+```rust
+//!
+//! A library for modeling artistic concepts.
+
+pub use kinds::PrimaryColor;
+pub use kinds::SecondaryColor;
+pub use utils::mix;
+
+pub mod kinds {
+    // --snip--
+}
+
+pub mod utils {
+    // --snip--
+}
+```
+
+users can directly access...
+
+```rust
+extern crate art;
+
+use art::PrimaryColor;
+use art::mix;
+
+fn main() {
+    // --snip--
+}
+```
+
+* `cargo doc` will generate docs which hilight this...
+
+<img src="file:///Users/salapati/.rustup/toolchains/stable-x86_64-apple-darwin/share/doc/rust/html/book/second-edition/img/trpl14-04.png"/>
+
+
+Creating a useful public API structure is more of an art than a science
+
+---
+
+class: left
+
+# Setting Up a Crates.io Account
+
+* Create an account on crates.io and get an API token
+
+```bash
+$ cargo login abcdefghijklmnopqrstuvwxyz012345
+```
+
+* Its a secret and stored locally in ~/.cargo/credentials
+
+---
+
+class: left
+
+# Before Publishing a New Crate
+
+Add metadata to the [package] section of the crate’s Cargo.toml file
+
+List of mandatory metadata...
+
+  * name :  All crate names are unique and made available on first come first 
+            server basis
+
+  * description : A line describing what your crate does
+
+  * license : A license for your code, eg; "MIT", "MIT OR Apache-2.0"
+
+```toml
+[package]
+name = "guessing_game"
+version = "0.1.0"
+authors = ["Your Name <you@example.com>"]
+description = "A fun game where you guess what number the computer has chosen."
+license = "MIT OR Apache-2.0"
+
+[dependencies]
+```
+
+---
+
+class: left
+
+# Publishing to Crates.io
+
+* **publish is permanent** 
+
+* A version can never be overwritten, and the code cannot be deleted
+
+* One major goal of crates.io is to act as a permanent archive of code 
+
+```bash
+$ cargo publish
+ Updating registry `https://github.com/rust-lang/crates.io-index`
+Packaging guessing_game v0.1.0 (file:///projects/guessing_game)
+Verifying guessing_game v0.1.0 (file:///projects/guessing_game)
+Compiling guessing_game v0.1.0
+(file:///projects/guessing_game/target/package/guessing_game-0.1.0)
+ Finished dev [unoptimized + debuginfo] target(s) in 0.19 secs
+Uploading guessing_game v0.1.0 (file:///projects/guessing_game)
+```
+
+---
+
+class: left
+
+# Publishing a New Version of an Existing Crate
+
+* Change the version value specified in your Cargo.toml file 
+
+* Use Semantic Versioning rules to decide next version number 
+
+* `cargo publish` Uploads the new version
+
+```bash
+$ cargo publish 
+```
+
+
+---
+
+class: left
+
+# Removing Versions from Crates.io with cargo yank
+
+* can’t remove previous versions of a crate
+
+* `Yanking` a version prevents 
+
+  * new projects from starting to depend on that version 
+
+  * But, allows all existing projects that depend on it to continue to 
+    download and depend on that version
+
+* Essentially ...
+
+  * all projects with a Cargo.lock will not break
+
+  * any future Cargo.lock files generated will not use the yanked version
+
+* Yank won't delete the existing code, prevents projects from depending
+
+* Can't delete the accidentally uploaded secrets
+
+---
+
+class: left
+
+# `yank` and undo
+
+`yank` a version by...
+
+```bash
+$ cargo yank --vers 1.0.1
+```
+
+undo yanking by...
+
+```bash
+$ cargo yank --vers 1.0.1 --undo
+```
+
+---
+
+class: left
+
 # Summary
+
+* `///` are documentation comments and generates HTML documentation
+
+* `//!` are for the entire crate WIP ?
+
+* `pub use` re-exports your public api
+
+* `cargo login <token>` logins into your crates.io account
+
+* `cargo publish` will publish new crate to crates.io
+
+* Crate names are unique and permanent
+
+* Crate versions can't be modified or delete, they can only be yanked
