--- a/static/md/14.3_Cargo_Workspaces.md
+++ b/static/md/14.3_Cargo_Workspaces.md
@@ -8,4 +8,189 @@ class: middle, center
 
 class: left
 
+# Workspaces
+
+* `workspaces` help manage multiple related packages, developed in tandem
+
+* workspace is a set of packages that share the same Cargo.lock and output directory
+
+* There are multiple ways to structure a workspace and the common way is...
+
+```bash
+$ mkdir add
+$ cd add
+```
+
+---
+
+class: left
+
+* Create a directory for the workspace 
+
+* Create a Cargo.toml file that configures the entire workspace. 
+
+* It won’t have a `[package]` section or any metadata
+
+* It starts with a `[workspace]` section and add a member to the workspace path adder, 
+  which is where we’ll put our binary crate
+
+```toml
+[workspace]
+
+members = [
+    "adder",
+]
+```
+
+Create adder binary by running...
+
+```bash
+$ cargo new --bin adder
+     Created binary (application) `adder` project
+```
+
+```bash
+├── Cargo.lock
+├── Cargo.toml
+├── adder
+│   ├── Cargo.toml
+│   └── src
+│       └── main.rs
+└── target
+```
+
+* The entire workspace has one target directory at the top level
+
+* The adder crate doesn’t have its own target directory
+
+* Running `cargo build` will create binary only in the outer `target` folder
+
+---
+
+class: left
+
+# Creating the Second Crate in the Workspace
+
+```toml
+[workspace]
+
+members = [
+    "adder",
+    "add-one",
+]
+```
+
+```bash
+$ cargo new add-one
+     Created library `add-one` project
+```
+
+Will create a new library named `add-one`
+
+```bash
+├── Cargo.lock
+├── Cargo.toml
+├── add-one
+│   ├── Cargo.toml
+│   └── src
+│       └── lib.rs
+├── adder
+│   ├── Cargo.toml
+│   └── src
+│       └── main.rs
+└── target
+```
+
+---
+
+class: left
+
+# Dependencies
+
+
+in adder/Cargo.toml
+
+```toml
+[dependencies]
+add-one = { path = "../add-one" }
+```
+
+Add add-one as dependcy inside adder
+
+---
+
+class: left
+
+# Building and Running
+
+* You can build the workspace by running `cargo build`
+
+* You can choose to run the package by running `cargo run -p <packageName>`
+
+---
+
+class: left
+
+# Depending on an External Crate in a Workspace
+
+* `Cargo.lock` is at the top of the workspace
+
+* Adding external crates to any of the `Cargo.toml` files will update the global
+  'Cargo.lock' 
+
+This will ensure that...
+
+  * Won't download twice
+
+  * All the crates are using the save version of dependencies
+
+  * Crates in the workspace are compatible with each other
+
+---
+
+class: left
+
+# Adding a Test to a Workspace
+
+* `cargo test` will run `tests` and `documentation tests` in all the packages
+
+* `cargo test -p <packageName>` will run tests for just that package
+
+---
+
+class: left
+
+# Publishing the crates in the workspace
+
+* Each `crate` in the workspace has to be published separately
+
+* change to each crate’s directory in the workspace and run `cargo publish`
+
+---
+
+class: left
+
 # Summary
+
+* `workspace` is a set of packages that share the same Cargo.lock and output 
+  directory
+
+* Add memebers in the `cargo.toml` by adding `members = ['packageA', 'packageB']`
+
+* Each package will have its own `Cargo.toml` file
+
+* Single `Cargo.lock` file at the root will ensure all the crates are using the
+  same external crates
+
+* 
+
+* `cargo build` will build all packages `crargo buidl -p <package>` will build 
+  single package
+
+* `cargo test` will run tests for all packages `cargo test -p <package>` will limit 
+  to one package
+
+* Publish packages by change to each crate’s directory and run `cargo publish`
+
+* Keeping crates in a workspace makes coordination between them easier if they 
+  often change at the same time
