--- a/static/md/14.4_Installing_Binaries_from_Crates.io_with_cargo_install.md
+++ b/static/md/14.4_Installing_Binaries_from_Crates.io_with_cargo_install.md
@@ -8,4 +8,52 @@ class: middle, center
 
 class: left
 
+# Cargo Install
+
+* `cargo install` installs binary crates locally
+
+* Not intended to replace system packages
+
+* Just a convenient way for Rust developers to share and install tools
+
+* Readme specifies if the crate is a 
+
+    * binary : has a src/main.rs file or another file specified as a binary
+
+    or 
+
+    * library : target that isn’t runnable on its own
+
+    or 
+
+    * both : 
+
+---
+
+class: left
+
+# Installation Location
+
+* The default directory is `$HOME/.cargo/bin`
+
+```bash
+$ cargo install ripgrep
+Updating registry `https://github.com/rust-lang/crates.io-index`
+ Downloading ripgrep v0.3.2
+ --snip--
+   Compiling ripgrep v0.3.2
+    Finished release [optimized + debuginfo] target(s) in 97.91 secs
+  Installing ~/.cargo/bin/rg
+```
+
+* Last line shows the location and the name of the binary
+
+---
+
+class: left
+
 # Summary
+
+* `cargo install` installs binary crates locally 
+
+* default location is `$HOME/.cargo/bin`
