--- a/static/md/14.5_Extending_Cargo_with_Custom_Commands.md
+++ b/static/md/14.5_Extending_Cargo_with_Custom_Commands.md
@@ -8,4 +8,26 @@ class: middle, center
 
 class: left
 
+# Extending Cargo
+
+* Designed to extend with new subcommands without having to modify Cargo
+
+* If a binary in your $PATH is named cargo-something
+
+* You can run it as if it was a Cargo subcommand by running `cargo something`
+
+* `cargo --list` will list the custom commands as well
+
+---
+
+class: left
+
 # Summary
+
+* `Cargo` and `Crates.io` is a huge advantage for Rust 
+
+* Standard Library is small and stable
+
+* Crates are easy to create, use and share
+
+* Share your crates at `crates.io`
