--- a/static/md/17.0_Is_Rust_an_Object_Oriented_Programming_Language.md
+++ b/static/md/17.0_Is_Rust_an_Object_Oriented_Programming_Language.md
@@ -8,4 +8,12 @@ class: middle, center
 
 class: left
 
+# Is it ?
+
+* Under some definitions, Rust is object-oriented; under other definitions, it is not.
+
+---
+
+class: left
+
 # Summary
