--- a/static/md/17.1_What_Does_Object_Oriented_Mean.md
+++ b/static/md/17.1_What_Does_Object_Oriented_Mean.md
@@ -8,4 +8,182 @@ class: middle, center
 
 class: left
 
+# Common characterestics
+
+* Rust is influenced by many different programming paradigms 
+
+* `OOP` is one of them
+
+* No consensus on what features a language needs in order to be called 
+  object-oriented
+
+* They tend to share certain common characteristics...
+
+  * objects
+  
+  * encapsulation
+
+  * inheritance
+
+---
+
+class: left
+
+# Objects Contain Data and Behavior
+
+```text
+Object-oriented programs are made up of objects. 
+An object packages both data and the procedures that operate on that data.
+The procedures are typically called methods or operations 
+- The Gang of Four book
+```
+
+* Even though `structs` and `enums` with methods aren’t called objects, they 
+  provide the same functionality
+
+* So, Rust is Object Oriented according to this definition
+
+---
+
+class: left
+
+# Encapsulation that Hides Implementation Details
+
+* Implementation details of an object aren’t accessible to code using that object
+
+* The only way to interact with an object therefore is through its public API
+
+* Code using the object should not be able to change data or behavior directly
+
+* By default all the functions, types in Rust are private
+
+* `pub` lets us make them public 
+
+* The option to use pub or not enables encapsulation of implementation details
+
+* Then Rust is an Object Oriented according to this rule
+
+---
+
+class: left
+
+# Inheritance as a Type System and as Code Sharing
+
+* An object can inherit from another object’s definition
+
+* Gaining the parent object’s data and behavior without defining again
+
+* struct dosen't inherit parent struct’s fields and method implementations
+
+* Rust is not object-oriented by this definition
+
+
+---
+
+class: left
+
+# Other Solutions
+
+* Rust provides other solutions, based on your reason for choosing inheritance
+
+  * Re-use of code 
+
+  * Type system
+
+---
+
+class: left
+
+# Inheritance : Re-use of code
+
+* Implement particular behavior for one type and re-use it for a different type
+
+* Rust provides default trait method implementations
+
+* Define a trait with default method 
+
+* Any type implementing the trait would have that default method available 
+
+* Similar to a parent class having an implementation of a method, and an 
+  inheriting child class then also having the implementation of the method
+
+* We can Override the default method like child can override the parent method
+
+---
+
+class: left
+
+# Inheritance : Type System aka Polymorphism
+
+* To enable a child type to be used in the same places as the parent type
+
+* Multiple objects can be substituted for each other if they share certain 
+  characteristics
+
+---
+
+class: left
+
+# Polymorphism
+
+* Inheritance for type system is also called Polymorphism
+
+* Genrally, polymorphism is synonymous with inheritance
+
+* General concept that refers to code that can work with data of multiple types
+
+* For inheritance, those types are generally subclasses
+
+* Rust instead uses...
+
+  * generics to abstract over different possible types
+
+  * trait bounds to impose constraints on what those types must provide
+  
+* This is called `bounded parametric polymorphism`
+
+---
+
+class: left
+
+# Inheriance 
+
+* Fallen out of favor as a programming design solution
+
+* It’s often at risk of sharing more code than needed
+
+* Subclasses shouldn’t always share all characteristics of their parent class, 
+  but will do so with inheritance
+
+* Some languages only allow a subclass to inherit from one class
+
+* Rust chose to take a different approach, using trait objects instead of 
+  inheritance
+
+---
+
+class: left
+
 # Summary
+
+Rust is inspired by lot of paradigmns including `OOP`
+
+Common characteristics of Object Oriented programms and Rust's solution to it
+
+* Objects Contain Data and Behavior : 
+
+  * `struct` with methods
+
+* Encapsulation that Hides Implementation Details : 
+  
+  * `pub` to control the client API
+
+* Inheritance as Code re-use : 
+
+  * `traits` with default methods
+
+* Inheritance as a Type System Aka Polymorphism : 
+
+  * It’s often at risk of sharing more code than needed
+
+  * `generics` to abstract over different possible types
