--- a/static/md/17.2_Trait_Objects_for_using_Vectors_of_Different_Types.md
+++ b/static/md/17.2_Trait_Objects_for_using_Vectors_of_Different_Types.md
@@ -8,4 +8,22 @@ class: middle, center
 
 class: left
 
+# Defining a Trait for Common Behavior
+
+---
+
+class: left
+
+# Implementing the Trait
+
+---
+
+class: left
+
+# Object Safety is Required for Trait Objects
+
+---
+
+class: left
+
 # Summary
