--- a/static/md/17.3_Object_Oriented_Design_Pattern_Implementation.md
+++ b/static/md/17.3_Object_Oriented_Design_Pattern_Implementation.md
@@ -8,4 +8,56 @@ class: middle, center
 
 class: left
 
+# Defining Post and Creating a New Instance in the Draft State
+
+---
+
+class: left
+
+# Storing the Text of the Post Content
+
+---
+
+class: left
+
+# Ensuring the Content of a Draft Post is Empty
+
+---
+
+class: left
+
+# Requesting a Review of the Post Changes its State
+
+
+---
+
+class: left
+
+# Adding the approve Method that Changes the Behavior of content
+
+
+---
+
+class: left
+
+# Tradeoffs of the State Pattern
+
+
+---
+
+class: left
+
+# Encoding States and Behavior as Types
+
+---
+
+class: left
+
+# Implementing Transitions as Transformations into Different Types
+
+---
+
+class: left
+
 # Summary
+
